# Ziplink

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/: base62.py  database.py  main.py  models.py  rate_limiter.py
frontend/: README.md
frontend/src/: App.css  App.jsx  index.css
